syntax = "proto3";

package post.v1;

import "google/protobuf/timestamp.proto";

option go_package="github.com/qthuy2k1/thesis-management-backend/post/api/v1";

service PostService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse){}
    
    rpc GetPost(GetPostRequest) returns (GetPostResponse){}

    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse){}

    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse){}

    rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {}

    rpc GetAllPostsOfClassroom(GetAllPostsOfClassroomRequest) returns (GetAllPostsOfClassroomResponse) {}

    rpc GetAllPostsInReportingStage(GetAllPostsInReportingStageRequest) returns (GetAllPostsInReportingStageResponse) {}
}

message CommonPostResponse {
    int64 statusCode = 1;
    string message = 2;
}


// ====== POST ======
message PostInput {
    string title = 1;
    string content = 2;
    int64 classroomID = 3;
    int64 reportingStageID = 4;
    string authorID = 5;
}

message PostResponse {
    int64 id = 1;
    string title = 2;
    string content = 3;
    int64 classroomID = 4;
    int64 reportingStageID = 5;
    string authorID = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}

message CreatePostRequest {
   PostInput post = 1;
}

message CreatePostResponse {
    CommonPostResponse response = 1;
    PostResponse post = 2;
}


// ====== GET ======
message GetPostRequest {
    int64 id = 1;
}

message GetPostResponse {
    CommonPostResponse response = 1;
    PostResponse post = 2;
}

// ====== PUT ======
message UpdatePostRequest {
    int64 id = 1;
    PostInput post = 2;
}

message UpdatePostResponse {
    CommonPostResponse response = 1;
}

// ====== DELETE ======
message DeletePostRequest {
    int64 id = 1;
}

message DeletePostResponse {
    CommonPostResponse response = 1;
}

message PostFilter {
    
}

// ====== GET ALL ======
message GetPostsRequest {
    int64 page = 1;
    int64 limit = 2;
    string titleSearch = 3;
    string sortColumn = 4;
    string sortOrder = 5;
}

message GetPostsResponse {
    CommonPostResponse response = 1; 
    int64 totalCount = 2;
    repeated PostResponse posts = 3;
}

// ====== GET ALL OF CLASSROOM ======
message GetAllPostsOfClassroomRequest {
    int64 page = 1;
    int64 limit = 2;
    string titleSearch = 3;
    string sortColumn = 4;
    string sortOrder = 5;
    int64 classroomID = 6;
}

message GetAllPostsOfClassroomResponse {
    CommonPostResponse response = 1;
    int64 totalCount = 2;
    repeated PostResponse posts = 3;
}


message GetAllPostsInReportingStageRequest {
    int64 classroomID = 1; 
    int64 reportingStageID = 2;
}

message GetAllPostsInReportingStageResponse {
    CommonPostResponse response = 1;
    int64 totalCount = 2;
    repeated PostResponse posts = 3;
}